--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<title>Home | DrgnFireYellow's code</title>
+<title>Home | The Coding Dragon With Yellow Fire</title>
 <link rel="icon" href="logo.jpg">
