--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
 <title>Home | The Coding Dragon With Yellow Fire</title>
 <link rel="icon" href="logo.jpg">
-<h1>This site is under construction</h1>
+<head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js" integrity="sha512-trzlduO3EdG7Q0xK4+A+rPbcolVt37ftugUSOvrHhLR5Yw5rsfWXcpB3CPuEBcRBCHpc+j18xtQ6YrtVPKCdsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <nav style="background-color: yellow;">
+            <li class="active">
+              <a href="#"><img src="images/house-door-fill.svg"></a>
+            </li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+<h1 style="text-align: center;">The Coding Dragon With Yellow Fire</h1>
+<img src="images/header.gif" style="width: 50%; margin-right: auto; margin-left: auto; display: block;">
+
+</html>
