--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </div>
 
 <h1 style="text-align: center;">The Coding Dragon With Yellow Fire</h1>
+<h2 style="text-align: center;">Site is under construction.</h2>
 <img src="images/header.gif" style="width: 50%; margin-right: auto; margin-left: auto; display: block;">
 
 </html>
