--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>Home | The Coding Dragon With Yellow Fire</title>
   <link type="text/css" rel="stylesheet" href="style.css">
   <div id="nav" class="nav">
     <svg xmlns="http://www.w3.org/2000/svg"
