--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <link type="images/jpg" rel="icon" href="images/logo.jpg">
+  <head>
+    <link type="images/jpg" rel="icon" href="images/logo.jpg">
+  </head>
   <title>Home | The Coding Dragon With Yellow Fire</title>
   <link type="text/css" rel="stylesheet" href="style.css">
   <div id="nav" class="nav">
