--- a/MC.html
+++ b/MC.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="/style.css"
     <head>
         <title>Minecraft Bedrock Add-ons | The Coding Dragon With Yellow Fire</title>
     </head>
