--- a/MC.html
+++ b/MC.html
@@ -9,7 +9,7 @@
          width="1.66667in" height="1.66667in"
          viewBox="0 0 500 500">
       <path id="Selection"
-            fill="black" stroke="black" stroke-width="1"
+            fill="orange" stroke="black" stroke-width="1"
             d="M 124.00,33.11
                C 114.53,35.19 107.72,37.44 100.00,43.52
                  94.96,47.49 90.68,52.45 87.46,58.00
