--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
              345.00,305.21 310.00,305.21 310.00,305.21 Z" />
 </svg>
   <br>
-  <a href="index.html">Home</a>
-  <a href="python.html">  Python</a>
-  <a href="js.html">  JS</a>
-  <a href="MC.html">  Minecraft Bedrock Add-ons</a>
+  <a href="index">Home</a>
+  <a href="python">  Python</a>
+  <a href="js">  JS</a>
+  <a href="MC">  Minecraft Bedrock Add-ons</a>
   </div>
   <br>
   <h1 style="text-align: center;">The Coding<br>Dragon<br>With Yellow<br>Fire</h1>
