--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <a href="index">Home</a>
   <a href="python">  Python</a>
   <a href="js">  JS</a>
-  <a href="MC">  Minecraft Bedrock Add-ons</a>
+  <a href="mc">  Minecraft Bedrock Add-ons</a>
   </div>
   <br>
   <h1 style="text-align: center;">The Coding<br>Dragon<br>With Yellow<br>Fire</h1>
