--- a/mc.html
+++ b/mc.html
@@ -55,9 +55,9 @@
                  345.00,305.21 310.00,305.21 310.00,305.21 Z" />
     </svg>
       <br>
-      <a href="index.html">Home</a>
-      <a href="python.html">  Python</a>
-      <a href="js.html">  JS</a>
-      <a href="MC.html">  Minecraft Bedrock Add-ons</a>
+      <a href="index">Home</a>
+      <a href="python">  Python</a>
+      <a href="js">  JS</a>
+      <a href="mc">  Minecraft Bedrock Add-ons</a>
       </div>
 </html>
