--- a/mc.html
+++ b/mc.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="/style.css">
     <head>
         <title>Minecraft Bedrock Add-ons | The Coding Dragon With Yellow Fire</title>
+        <link rel="icon" src="images/logo.png">
     </head>
     <div id="nav" class="nav">
         <svg xmlns="http://www.w3.org/2000/svg"
