--- a/js.html
+++ b/js.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/style.css">
     <head>
         <title>JS | The Coding Dragon With Yellow Fire</title>
-        <link rel="icon" src="images/logo.png">
+        <link type="images/jpeg" rel="icon" src="images/logo.jpg">
     </head>
     <div id="nav" class="nav">
         <svg xmlns="http://www.w3.org/2000/svg"
