--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -58,4 +58,4 @@
   </div>
   <br>
 <p>In this tutorial I will show you how to create an animated terminal welcome screen.<p>
-  <img src="https://github.com/DrgnFireYellow/drgnfireyellow.github.io/blob/master/CustomTerminalStartup-1.png?raw=true">
+  <img class="center" src="https://github.com/DrgnFireYellow/drgnfireyellow.github.io/blob/master/CustomTerminalStartup-1.png?raw=true">
