--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -59,3 +59,8 @@
   <br>
 <p>In this tutorial I will show you how to create an animated terminal welcome screen.<p>
   <img class="center" src="https://github.com/DrgnFireYellow/drgnfireyellow.github.io/blob/master/CustomTerminalStartup-1.png?raw=true">
+  <p>First you need to install the needed packages.</p>
+  <code type="text/bash">
+    sudo apt install figlet
+    sudo apt install lolcat
+  </code>
