--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -62,5 +62,7 @@
   <p>First you need to install the needed packages.</p>
   <code type="text/bash">
     sudo apt install figlet
+    <br>
     sudo apt install lolcat
   </code>
+  <p>The next step is to open either your .bashrc or your .zshrc file.</p>
