--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -66,3 +66,10 @@
     sudo apt install lolcat
   </code>
   <p>The next step is to open either your .bashrc or your .zshrc file.</p>
+  <code>
+    nano ~/.bashrc
+    <br>
+    or
+    <br>
+    nano ~/.zshrc
+  </code>
