--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -73,3 +73,8 @@
     <br>
     nano ~/.zshrc
   </code>
+  <p>At the <strong>top</strong> of one of those files enter the following replacing USERNAME with your username and os with your operating sytstem.</p>
+  <code>
+    figlet -c Welcome, USERNAME | lolcat -a -d 1
+    figlet -f term -c OS: os | lolcat
+  </code>
