--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -16,6 +16,7 @@
     <br>
     sudo apt install lolcat
   </code>
+  <p>Figlet creates ascii art from text and lolcat makes text rainbow and animates ascii art.</p>
   <p>The next step is to open either your .bashrc or your .zshrc file.</p>
   <code>
     nano ~/.bashrc
@@ -30,3 +31,4 @@
     <br>
     figlet -f term -c OS: os | lolcat
   </code>
+  <p>The -c in the figlet commands tells it to center the text, in the first lolcat command -a tells it to animate and -d 1 tells the animation to take 1 second, in the second figlet command -f term tells it to use the standard terminal font.</p>
