--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -1,5 +1,6 @@
 <title>Custom Terminal Startup Screen | Tutorials | The Coding Dragon With Yellow Fire</title>
 <link rel="stylesheet" href="../../style.css" type="text/css">
+<link rel="icon" type="images/jpeg" href="../../images/logo.jpg"
   <div id="nav" class="nav">
   <br>
   <a href="index.html">Home</a>
