--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -3,10 +3,10 @@
 <link rel="icon" type="images/jpeg" href="../../images/logo.jpg"
   <div id="nav" class="nav">
   <br>
-  <a href="index.html">Home</a>
-  <a href="python.html">  Python</a>
-  <a href="js.html">  JS</a>
-  <a href="mc.html">  Minecraft Bedrock Add-ons</a>
+  <a href="../../index.html">Home</a>
+  <a href="../..python.html">  Python</a>
+  <a href="../..js.html">  JS</a>
+  <a href="../../mc.html">  Minecraft Bedrock Add-ons</a>
   </div>
   <br>
 <p>In this tutorial I will show you how to create an animated terminal welcome screen.<p>
