--- a/js.html
+++ b/js.html
@@ -11,5 +11,6 @@
       <a href="python.html">  Python</a>
       <a href="js.html">  JS</a>
       <a href="mc.html">  Minecraft Bedrock Add-ons</a>
+      <a href="tutorials.html">  Tutorials</a>
       </div>
 </html>
