--- a/tutorials.html
+++ b/tutorials.html
@@ -11,6 +11,7 @@
       <a href="python.html">  Python</a>
       <a href="js.html">  JS</a>
       <a href="mc.html">  Minecraft Bedrock Add-ons</a>
+      <a href="tutorials.html">  Tutorials</a>
     </div>
     <card><a href="tutorials/Custom Terminal Startup Screen/tutorial.html"><h3>Custom Terminal Startup Screen</h3><br><img src="CustomTerminalStartup-1.png"></a></card>
 </html>
