--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <a href="python.html">  Python</a>
   <a href="js.html">  JS</a>
   <a href="mc.html">  Minecraft Bedrock Add-ons</a>
+  <a href="tutorials.html">  Tutorials</a>
   </div>
   <br>
   <h1 style="text-align: center;">The Coding<br>Dragon<br>With Yellow<br>Fire</h1>
