--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -7,6 +7,7 @@
   <a href="../..python.html">  Python</a>
   <a href="../..js.html">  JS</a>
   <a href="../../mc.html">  Minecraft Bedrock Add-ons</a>
+  <a href="../../tutorials.html">  Tutorials</a>
   </div>
   <br>
 <p>In this tutorial I will show you how to create an animated terminal welcome screen.<p>
