--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -32,5 +32,7 @@
     figlet -c Welcome, USERNAME | lolcat -a -d 1
     <br>
     figlet -f term -c OS: os | lolcat
+    <br>
+    date | figlet -f term -c | lolcat
   </code>
-  <p>The -c in the figlet commands tells it to center the text, in the first lolcat command -a tells it to animate and -d 1 tells the animation to take 1 second, in the second figlet command -f term tells it to use the standard terminal font.</p>
+  <p>The -c in the figlet commands tells it to center the text, in the first lolcat command -a tells it to animate and -d 1 tells the animation to take 1 second, in the second and third figlet commands -f term tells it to use the standard terminal font, date displays the current date and time.</p>
