--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -21,11 +21,11 @@
   <p>Figlet creates ascii art from text and lolcat makes text rainbow and animates ascii art.</p>
   <p>The next step is to open either your .bashrc or your .zshrc file.</p>
   <code>
-    nano ~/.bashrc
+    nano ~/.bashrc || vi ~/.zshrc
     <br>
     or
     <br>
-    nano ~/.zshrc
+    nano ~/.zshrc || vi ~/.zshrc
   </code>
   <p>At the <strong>top</strong> of one of those files enter the following replacing USERNAME with your username and os with your operating sytstem.</p>
   <code>
