--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
   </div>
   <br>
   <h1 style="text-align: center;">The Coding<br>Dragon<br>With Yellow<br>Fire</h1>
-  <img src="images/header.gif" alt="header" class="center">
+  <img src="https://sdk.bitmoji.com/render/panel/e0c8b93f-c246-46e8-9db2-ec0cb01ec9eb-d1bd5b60-f294-4234-b203-7ca2fe5b0627-v1.png?transparent=1&palette=1" alt="header" class="center">
 </html>
