--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="images/jpg" rel="icon" href="images/logo.jpg">
+    <link type="images/jpg" rel="icon" href="https://sdk.bitmoji.com/render/panel/096dffe0-3934-41db-842c-34c180d0615c-d1bd5b60-f294-4234-b203-7ca2fe5b0627-v1.png?transparent=1&palette=1">
   </head>
   <title>Home | The Coding Dragon With Yellow Fire</title>
   <link type="text/css" rel="stylesheet" href="style.css">
