--- a/mc.html
+++ b/mc.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/style.css">
     <head>
         <title>Minecraft Bedrock Add-ons | The Coding Dragon With Yellow Fire</title>
-        <link type="images/jpeg" rel="icon" href="images/logo.jpg">
+        <link type="images/jpeg" rel="icon" href="https://sdk.bitmoji.com/render/panel/096dffe0-3934-41db-842c-34c180d0615c-d1bd5b60-f294-4234-b203-7ca2fe5b0627-v1.png?transparent=1&palette=1">
     </head>
     <div id="nav" class="nav">
       <br>
