--- a/tutorials/Custom Terminal Startup Screen/tutorial.html
+++ b/tutorials/Custom Terminal Startup Screen/tutorial.html
@@ -1,6 +1,6 @@
 <title>Custom Terminal Startup Screen | Tutorials | The Coding Dragon With Yellow Fire</title>
 <link rel="stylesheet" href="../../style.css" type="text/css">
-<link rel="icon" type="images/jpeg" href="../../images/logo.jpg"
+<link rel="icon" type="images/jpeg" href="https://sdk.bitmoji.com/render/panel/096dffe0-3934-41db-842c-34c180d0615c-d1bd5b60-f294-4234-b203-7ca2fe5b0627-v1.png?transparent=1&palette=1"
   <div id="nav" class="nav">
   <br>
   <a href="../../index.html">Home</a>
