--- a/doodlebox/index.html
+++ b/doodlebox/index.html
@@ -6,6 +6,15 @@
   <title>doodlebox</title>
   </head>
   <body>
+  <div id="nav" class="nav">
+    <br>
+    <a href="../index.html">Home</a>
+    <a href="../python.html">  Python</a>
+    <a href="../js.html">  JS</a>
+    <a href="../mc.html">  Minecraft Bedrock Add-ons</a>
+    <a href="../tutorials.html">  Tutorials</a>
+  </div>
+    <br>
     <script type="text/javascript" src="./sketch.js"></script>
 
 
