--- a/js.html
+++ b/js.html
@@ -13,4 +13,6 @@
       <a href="mc.html">  Minecraft Bedrock Add-ons</a>
       <a href="tutorials.html">  Tutorials</a>
       </div>
+      <br>
+      <a href="doodlebox/index.html">Doodlebox</a>
 </html>
