Add other projects and more plugins

--- a/apps.html
+++ b/apps.html
@@ -9,3 +9,4 @@
 <a href="https://github.com/DrgnFireYellow/EmuWeb">Github</a>
 <h2>zlugin</h2>
 <p>zlugin is a super lightweight zsh plugin manager that is very simple to use.</p>
+<a href="https://github.com/DrgnFireYellow/zlugin"
