--- a/plugins.html
+++ b/plugins.html
@@ -4,3 +4,9 @@
 <h2>Homeland</h2>
 <p>Homeland gives players on your server their own plots similar to Hypixel Housing</p>
 <a href="https://github.com/DrgnFireYellow/Homeland">Github</a>
+<h2>Vehiblocks</h2>
+<p>Vehiblocks allows you to create movable vehicles out of blocks. NOTE: Very buggy</p>
+<a href="https://github.com/DrgnFireYellow/Vehiblocks">Github</a>
+<h2>DragonicRoyale</h2>
+<p>DragonicRoyale is a plugin that adds a battle royale minigame to your Minecraft server.</p>\
+<a href="https://github.com/DrgnFireYellow/DragonicRoyale">Github</a>
