--- a/apps.html
+++ b/apps.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<title>DrgnFireYellow's Apps</title>
+<link rel="stylesheet" href="style.css">
 <h1>Apps</h1>
 <p>These are different applications that I have made</p>
 <h2>CharacterAR</h2>
