--- a/otherprojects.html
+++ b/otherprojects.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<title>DrgnFireYellow's Other Project</title>
+<link rel="stylesheet" href="style.css">
 <h1>Other Projects</h1>
 <h2>minigameutils</h2>
 <p>minigameutils is a Minecraft Datapack that provides helpful tools for creating minigame maps.</p>
