--- a/plugins.html
+++ b/plugins.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<title>DrgnFireYellow's Minecraft Plugins</title>
+<link rel="stylesheet" href="style.css">
 <h1>Minecraft Plugins</h1>
 <p>These are some Minecraft plugins I've made.</p>
 <h2>Homeland</h2>
@@ -8,5 +10,5 @@
 <p>Vehiblocks allows you to create movable vehicles out of blocks. NOTE: Very buggy</p>
 <a href="https://github.com/DrgnFireYellow/Vehiblocks">Github</a>
 <h2>DragonicRoyale</h2>
-<p>DragonicRoyale is a plugin that adds a battle royale minigame to your Minecraft server.</p>\
+<p>DragonicRoyale is a plugin that adds a battle royale minigame to your Minecraft server.</p>
 <a href="https://github.com/DrgnFireYellow/DragonicRoyale">Github</a>
