--- a/otherprojects.html
+++ b/otherprojects.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <title>DrgnFireYellow's Other Project</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <h1>Other Projects</h1>
 <h2>minigameutils</h2>
