--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <title>DrgnFireYellow's Apps</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <h1>Apps</h1>
 <p>These are different applications that I have made</p>
