--- a/plugins.html
+++ b/plugins.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <title>DrgnFireYellow's Minecraft Plugins</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <h1>Minecraft Plugins</h1>
 <p>These are some Minecraft plugins I've made.</p>
