Update background url on poster

--- a/poster.html
+++ b/poster.html
@@ -5,7 +5,7 @@
         <title>The History of Animation</title>
         <style>
             body {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/animation-9403059_1280.jpg");
+                background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://drgnfireyellow.github.io/assets/animation-9403059_1280.jpg");
                 font-family: Arial, Helvetica, sans-serif;
             }
 
